updated at: 2023-04-25 21:50, 【VRChat向け】Uni Size Seal (サイズ シール) テクスチャ素材 - key-assets - BOOTH

--- a/VRChat/61/1292661.html
+++ b/VRChat/61/1292661.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/Jbe4lhSaJpmP7jZ3mcgkUXR5J5EjTDJP3biQuF0r/4="></script>
+    "wf/rgxNYApaTxnGZtqpi9SysL/U8q4ehGVzSVPHP0io="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】Uni Size Seal (サイズ シール) テクスチャ素材","description":"テクスチャ改変用の透過png画像素材です。\n\n服から剥がすのをつい忘れてしまうあのシールを、”あえて貼るため”のテクスチャ素材です。\n","url":"https://booth.pm/ja/items/1292661","offers":{"priceCurrency":"JPY","@type":"Offer","price":"198"},"image":"https://booth.pximg.net/c/620x620/0b8c0ae5-9b47-4d8d-adcb-3d51a8fb4fb1/i/1292661/934ee0bf-8675-42c2-bcd4-510ab131682e_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/Jbe4lhSaJpmP7jZ3mcgkUXR5J5EjTDJP3biQuF0r/4="></script>
+    nonce="wf/rgxNYApaTxnGZtqpi9SysL/U8q4ehGVzSVPHP0io="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1292661/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1292661/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
