--- a/VRChat/90/1306290.html
+++ b/VRChat/90/1306290.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+zziNhezcZvxf/ZvENghNCW49SuskU3QZm5Rxwee5l4="></script>
+    "zasD8fMaBtxKXYp26I/oiM9yb3isJ31n3y+sJHCTXjM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボリューミ―ツインテール","description":"【同梱ファイル】\nツインテ.fbx\n前髪ワンレン.fbx\n後ろ髪ツインテ.fbx\nreadme.txt\nおまけテクスチャーファイル（BMP）ｘ6\nUVマップ（BMP）　x2\n設定について.JPG　x2","url":"https://booth.pm/ja/items/1306290","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a968361b-677c-4df2-bd21-ba86af47c168/i/1306290/6e16190a-1cef-4033-beda-a6f424f942e5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+zziNhezcZvxf/ZvENghNCW49SuskU3QZm5Rxwee5l4="></script>
+    nonce="zasD8fMaBtxKXYp26I/oiM9yb3isJ31n3y+sJHCTXjM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1306290/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               382
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1306290/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               382
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
