updated at: 2023-04-25 21:51, 水平二連散弾銃3Dモデル「キャッツレイ」(パーティクル同梱) - mqofactory - BOOTH

--- a/VRChat/78/1305278.html
+++ b/VRChat/78/1305278.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fgnSValMxfMUts+v4LItd2pKtAFfvfcSttn8n+0FZIc="></script>
+    "xv26PFNpqmyjMF+QzVz7c+SotxlUm2KMaQcrdT6krdY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"水平二連散弾銃3Dモデル「キャッツレイ」(パーティクル同梱)","description":"2019/05/03\nパーティクルを追加しました。\n\n頂点数：一丁辺り1108\n\nサイズ違いの二丁と、散弾パーティクルのセット\nギミックはありません。中折もしませんしトリガーも動きません。\n\n以下、データに同梱の規約テキスト\n\nunity、VRChat向けのモデルデータです。\n\n以下、同梱物の全てまたは一部を「本データ」と省します。\n\n◆利用規約◆\n商用利用可、好きに使っていただいて構いませんが、利用にあたって以下のことは不許可とさせていただきます。\n\n販売されている本データをそのまま抜き出せる形での二次配布、転売。\n本データの著作権主張。\n個人や団体への誹謗中傷や政治的な利用を目的とした使用(使用した作品世界内での演出としてなら無論構いません)。\nその他公序良俗に反する行為や、他者を不快にさせる目的での利用は厳に慎んでください。\n\n\n◆免責◆\n本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。","url":"https://booth.pm/ja/items/1305278","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/f63271ef-1176-416b-8e02-e744195dd0d9/i/1305278/6e6a7b27-0c99-48bc-9281-d6b52fd0f174_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fgnSValMxfMUts+v4LItd2pKtAFfvfcSttn8n+0FZIc="></script>
+    nonce="xv26PFNpqmyjMF+QzVz7c+SotxlUm2KMaQcrdT6krdY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1305278/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1305278/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
