--- a/VRChat/45/1305145.html
+++ b/VRChat/45/1305145.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GVkj/F0mswYw6PSjPFm5RXJ7CBfDKpsOV6n9MG8C6R8="></script>
+    "v9kBiRBQiRbf5OJRt3JVhXSZnJQwzyrZicy97VcW0Io="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat ワールド向けBGM集","description":"こちらの商品は、VRChatワールド制作者さま向けのBGM素材となります。\nオーケストラ曲、ピアノ曲を中心に18曲を収録！\n\n…2020年6月13日　3曲新曲を追加しました！\n\n一部の曲がSoundCloudにて試聴ができます。\n\n【利用規約】\n・こちらで配布している楽曲は、編曲した一部の曲を除き、「Ponzu Music Project」に著作権があります。\n\n・「商用利用」とは、制作物にPonzu Music Projectの素材を使用し、販売・課金・入場料徴収などを行うことをいいます。\n・「著作権表示」とは、\"音楽：Ponzu Music Project 〇〇(使用楽曲)\"と制作物に表記することをいいます。\n・「使用報告」とは、Ponzu Music Project の音楽を使用したことを、何らかの手段を持って当方へ連絡することをいいます。\n\n\n【BGM素材としてご利用の場合】\n・非商用の場合(個人・企業・団体)\n→禁止事項に触れなければ制限なくご使用できます。著作権表示の必要はありません。任意ですが使用報告をしていただけると作者は喜びます。\n\n・商用利用の場合\n→使用媒体や配布物に「著作権表示」と「使用報告」をしていただくことが条件です。使用料を追加でお支払いいただく必要はございません。\n\n使用報告はこちらへ→Twitter @Ponzu_5733VRC　または\nyuupo2★sonic-blade.jp まで　(★は@へ変換して下さい)\n\n・上記の条件に当てはまらない場合(著作権表示拒否または使用報告拒否)\n→購入代金+使用料が発生いたします。使用料に関しましては要相談といたしますので、ご連絡ください。\n使用料は、楽曲の尺を参考にさせていただきます。\n\n【禁止事項】\n・宗教団体のサイトや制作物、また犯罪系・公序良俗に反しているサイト・制作物等での利用。\n\n・Ponzu Music Project Official Shop で購入した音楽の二次配布を目的とした行為を許可なく行うこと。\n\n・素材の転売\n\n・著作権の偽造\n\n・本質を損なう楽曲の加工(軽微な加工は除く)","url":"https://booth.pm/ja/items/1305145","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/8695374e-6b2c-4d6b-89df-8e47184916d0/i/1305145/09cb43c2-b179-409b-ac82-098a86f8ddb4_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GVkj/F0mswYw6PSjPFm5RXJ7CBfDKpsOV6n9MG8C6R8="></script>
+    nonce="v9kBiRBQiRbf5OJRt3JVhXSZnJQwzyrZicy97VcW0Io="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1305145/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1305145/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
