--- a/VRChat/40/1303740.html
+++ b/VRChat/40/1303740.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PZSxWUKsOYDQ2ieOW/k5/hXdemJQlI/cQciYCz1fYcc="></script>
+    "oatYGlzM/02dajKgUITBfUWJIpJe0ndqkZ0oknpb1bA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スチェッキン ОЦ-38","description":"【制作・配布】ひばフレ（Hibax_FRE）\n【連絡先】　Twitter:@Hibax_FRE\n\t　　hibaxfre728@gmail.com\n【公開日】2019/04/04\n\n●ロシアの拳銃スチェッキンOts-38の3Dモデルです。\n△10904ポリゴン（弾1発含む）\n\n●内容\n・Ots-38.fbx\n・Ots-38 1mesh.fbx ←弾を込めて結合した状態\n・readme.txt\n\n・テクスチャ各種\n\n\n●使用方法等\n\nテクスチャ、fbxデータを各種ソフトにインポートしてご利用下さい。\nいろいろボーンで動かせます。SP-4はシェイプキーでピストンを押し上げれます。\n\n●免責事項\n当モデルを使用することで使用者側に不利な問題が生じた場合、\nそれがいかなるものであっても配布元は一切責任を負いません。\n\n●利用について\n\n容易に抜き出せる状態での再配布を禁止\n（ゲームの素材やVRCアバターに利用して配布等は可）\n\n宗教や政治的主張等での使用は禁止\n\nゲーム制作、VRchat、改変、動画、同人などにどうぞ\n","url":"https://booth.pm/ja/items/1303740","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e56a8ef4-8f34-4b71-9b03-b4f436803f81/i/1303740/aaacb845-9e24-4da0-bc92-72618975251c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PZSxWUKsOYDQ2ieOW/k5/hXdemJQlI/cQciYCz1fYcc="></script>
+    nonce="oatYGlzM/02dajKgUITBfUWJIpJe0ndqkZ0oknpb1bA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1303740/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              489
+                              490
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1303740/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              489
+                              490
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
