--- a/VRChat/71/1302971.html
+++ b/VRChat/71/1302971.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/tEEMBgbfvKgNZCJj9vY29xAoDEC2bEF47c7KzZexgk="></script>
+    "KFNupcATlX/W27qRHnpM8FMcOUzmlxP5jOay/Ae//W8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Unity】LS Blade Shader","description":"よくあるセイバー的なやつのブレードに使えるシェーダーです。\n1メッシュ1マテリアルでセイバーの外側と内側を描画します。\n構造はかなりシンプルです。\n\nアウトラインは加算合成、内側は白固定のUnlitです。\n\n※DynamicBone式のトレイルには適していません","url":"https://booth.pm/ja/items/1302971","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/1302971/cb6b3429-fc21-4b89-b7d1-f7e8fffcd676_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/tEEMBgbfvKgNZCJj9vY29xAoDEC2bEF47c7KzZexgk="></script>
+    nonce="KFNupcATlX/W27qRHnpM8FMcOUzmlxP5jOay/Ae//W8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1302971/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              194
+                              195
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1302971/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              194
+                              195
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
