--- a/VRChat/73/1302873.html
+++ b/VRChat/73/1302873.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+tFB0WPBGfFsi8iY7xtdjgGkpFhLnTWjmVelqoRTKpA="></script>
+    "5yrIsWC3aWfc0LLGYQAUsoQEBFMxMoaZd9z1tlnd0DM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ヒ　ヨ　コ","description":"【はじめに】\nクソみたいなUVを整理整頓して編集しやすくしていただいたKuroharuさんに大いなる感謝の意を添えて配布させていただきます。\nこの度、Quest対応版のヒヨコをご用意いたしました。\nQuest版のご利用の場合、新規sceneにて、UnityのFile\u003eBuild SettingからAndroidをSwitch Platformしてからインポートください。\n\n【商品説明】\nヒヨコとおぼしき生命体です。(社交辞令)\nお好みでカスタマイズしてください。\n彼ら心なしか喜びますから。\n\n頂点：13516\n面：26933\n三角面：26933\nテクスチャ：2048px\n\n【含まれる物】\n-ヒヨコ本体のFBX\n-テクスチャ\n-Blenderファイル(骨付き)\n-Unityパッケージ\n\n【言い訳】\n・リップシンクはまた今度付けます(付きました)\n・多少画像と違うヒヨコの場合があります。\n・不具合等ありましたらお声かけ下さい。\n\n【リリースノート】\n・2019/04/10：ヒヨコ誕生\n・2019/10/30：ダディクールみたいな顔つけました。\n・2019/11/10：風邪ひきました。\n・2019/11/21：VRMHIYOKOを追加しました。\n\n【使用に関する注意】\n・モデル、テクスチャ、顔の改造・加筆修正は自由です。\n・無償、有償に関わらずデータの再配布はおやめください。\n　（VRChat内クローンでの配布は可能です。）\n・ゲームや配信、商用利用等に使えます。\n・サムネイル画像集ではArkToonShaderを使用しています。\n・VRChatで使用することを想定しています。\n・規則正しい生活して。","url":"https://booth.pm/ja/items/1302873","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3534b2b3-9894-4d0f-b985-002792a00148/i/1302873/9a2a7227-58e6-4d5e-b19c-95fd6a8a5633_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+tFB0WPBGfFsi8iY7xtdjgGkpFhLnTWjmVelqoRTKpA="></script>
+    nonce="5yrIsWC3aWfc0LLGYQAUsoQEBFMxMoaZd9z1tlnd0DM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1302873/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               154
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1302873/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               154
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
