updated at: 2023-04-25 21:53, VRChat想定アバター ミルコ=ファン=ハウテン - りんごじゅ～す - BOOTH

--- a/VRChat/08/1301608.html
+++ b/VRChat/08/1301608.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "funR+GFCXzYzclJ6YXvXPJQklnnMB3jRvFfTgPWz5mk="></script>
+    "a/NvpdHEhYDG5HLQ/TQ4oDW+/hA5mMJ/PUuWvJ5GjSw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定アバター ミルコ=ファン=ハウテン","description":"ミルクココアっぽいので名付けましたヾ(๑╹◡╹)ﾉ\"\nつよい？おまえは何を言っているんだ\n\n耳は普通に４つあります(o╹◡╹o)\n中は繋がってる\nわたしは何を言っているんだ\n\n大幅値引きしました～ヾ(๑╹◡╹)ﾉ\"\n","url":"https://booth.pm/ja/items/1301608","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/629c352e-e1a6-41ad-93c6-1a028df6b5cd/i/1301608/8088e749-6bac-46c6-b204-d5668d9eb84b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="funR+GFCXzYzclJ6YXvXPJQklnnMB3jRvFfTgPWz5mk="></script>
+    nonce="a/NvpdHEhYDG5HLQ/TQ4oDW+/hA5mMJ/PUuWvJ5GjSw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1301608/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1301608/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
