--- a/VRChat/36/1301536.html
+++ b/VRChat/36/1301536.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "G2uSVFbJ0ET5/uXiuDAO0HpjfBX1+9NqD3QJz+nZZOg="></script>
+    "9yGoTbvG890DcTo8noNwZHJre7XATKf9mMXHLyodkvE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無配】墺式先進戦闘銃【VRC想定】","description":"1980～90年代に行われた米軍の次世代戦闘銃開発計画、ACR計画にオーストリアの某社が提出したかっこいいあの銃をおおむね再現した.fbxの3Dモデルです。\n△11173\nVRChatやその他の諸々にお使いください。\n\nフレシェット弾を毎分1200発で発射し、リングプライマーの樹脂薬莢、極めつけは垂直に上下する薬室というめちゃくちゃ冒険しているおもしろ銃です。\nどうやらエヴァのパレットガンのモデルになったりしてるそうです。\nトリガー、セレクター、チャージングハンドルがシェイプキーで動かして遊べます。\n\n資料を斜め読みした程度で作ったのでまた粗の多いことこの上ないですが、冷戦終結期のお供にどうぞ～\n\n\n本体の.fbxファイルと、本体とマガジンのテクスチャ、およびそのUV展開図の.pngファイルを綴じたunitypackageが入っています。\n\n当モデルを使用したゲーム作品や映像作品での収益化は自由です。\n\nまた、テクスチャやモデル諸々の改変も自由ですが、再配布ができる形でのアップロードはお控えください。","url":"https://booth.pm/ja/items/1301536","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/59cf5824-c16e-422b-929f-f968efccb887/i/1301536/fda62b52-6dbb-4462-906e-e89bdd34a629_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G2uSVFbJ0ET5/uXiuDAO0HpjfBX1+9NqD3QJz+nZZOg="></script>
+    nonce="9yGoTbvG890DcTo8noNwZHJre7XATKf9mMXHLyodkvE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1301536/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1301536/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
