--- a/VRChat/98/1302398.html
+++ b/VRChat/98/1302398.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UGL2n3egCknn7n0BEFEzfBIQS0LUmMi2RxSGb5FcDjA="></script>
+    "Z0qeA/UGWLJDsX9NgcQQMKBLVc7r9JBJwmhgV+dXB1g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ビーチグッズ3D","description":"unityパッケージファイルです。\nビーチ関連の小物などが入っています。\n\n---------------------------------------------------------\n\n内容とポリゴン数は以下の通りです。(三角形のポリゴン数)\n\nanchor: 542\nbeach ball: 224\nchair: 360\nbeach parasol: 382\nbeach sandal: 786\nbucket: 660\ndiving fins: 392\nsand castle Lv1: 92\nsand castle Lv2: 260\nsand castle Lv3: 1408\nscoop: 120\nship wheel: 7060\nsunglasses: 694\nsurf board: 76\nukiwa: 506\n\n---------------------------------------------------------\n\n全て１メッシュ、１マテリアルで作成されています。\nマテリアル１つにつき、３つのテクスチャを用意しました。(defuse, metalnesssmoothness, normal) 512*512\n\n\n全てプレハブ化してあります。\nユニティパッケージをインポートしてください。\nプレハブフォルダから必要な小物をドラッグアンドドロップするだけです。ビーチらしくなります。\n\n---------------------------------------------------------\n\n使い方等に関して禁止事項はありません。\n好きに使ってください。クレジット不要です。\n\n---------------------------------------------------------\n\nゲーム開発者の皆さんを応援しています。頑張って;D\n\n\n\n\n\n\n\n\n","url":"https://booth.pm/ja/items/1302398","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/f0f418cd-9f62-481f-8824-9dc7e45e610a/i/1302398/1f67ac3c-62fb-4bdb-bff2-a0501517c340_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UGL2n3egCknn7n0BEFEzfBIQS0LUmMi2RxSGb5FcDjA="></script>
+    nonce="Z0qeA/UGWLJDsX9NgcQQMKBLVc7r9JBJwmhgV+dXB1g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1302398/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1302398/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
