updated at: 2023-04-25 21:54, 蕗の葉の傘[無料有] - 春風の小人亭 - BOOTH

--- a/VRChat/64/1302064.html
+++ b/VRChat/64/1302064.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tN6ZaJfwpSpU0+QhyJTF3Gl00MBETYqsAg72EsifeTc="></script>
+    "WjqizbL7uJuXDrbaI/u2k14sdQUoBL08wyTbS8unVVw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"蕗の葉の傘[無料有]","description":"[概要]\n\n蕗の葉の傘です\n1228ポリゴン\n\nアバターに持たせてもよし\nスケール小さくして頭に挿して髪飾りにするもよし\n\n基本無料だけど\n小人さんにおにぎりを提供するコース設けました\n\n\n\n[利用規約]\n\n改変はご自由に\n再配布・自作発言はご遠慮ください\n\n\n\n[制作]\nあしっど\nTwitter ID:@acid_aine\n\n連絡はTwitterの方まで","url":"https://booth.pm/ja/items/1302064","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9849ed29-b5f0-4585-b783-512af5c80a93/i/1302064/310b6683-46fd-4d1f-9f05-7831a7170b85_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tN6ZaJfwpSpU0+QhyJTF3Gl00MBETYqsAg72EsifeTc="></script>
+    nonce="WjqizbL7uJuXDrbaI/u2k14sdQUoBL08wyTbS8unVVw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1302064/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               196
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1302064/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               196
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
