updated at: 2023-04-25 21:55, シンプルなビニールプール - 柿の木の下 - BOOTH

--- a/VRChat/42/1301142.html
+++ b/VRChat/42/1301142.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9a8GWbigeDFVxNO5QZN8uZpWFdJZfpNCvhQsOw7dvi4="></script>
+    "tXGls0KX7SJeXz22cI7L3QSG1/3q6xbGy/hq2ny5sr0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シンプルなビニールプール","description":"VRChat向けのシンプルなビニールプールです。\n\n△5884\n\n水は張っていないので各自でどうにかしてください。\nそれ以外のテクスチャは設定済みです。\nUnityにインポートしてすぐ使えます。\n\n改変はどうぞご自由に。\n\nただし、改変の有無に関わらず再配布や販売は禁止します。\n\nお問い合わせ\nTwitter：@Kakino_Soraまでご連絡ください。","url":"https://booth.pm/ja/items/1301142","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ae2219d1-3eb9-4c79-bcb7-e26b4ab16ca4/i/1301142/c1e59ba2-caad-4ca0-9892-9a09747b53f4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9a8GWbigeDFVxNO5QZN8uZpWFdJZfpNCvhQsOw7dvi4="></script>
+    nonce="tXGls0KX7SJeXz22cI7L3QSG1/3q6xbGy/hq2ny5sr0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1301142/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               139
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1301142/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               139
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
