updated at: 2023-04-25 21:55, LL_A02 Suika - Lupina Laboratory - BOOTH

--- a/VRChat/72/1301072.html
+++ b/VRChat/72/1301072.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vG4kLknm0DGOKiBU/YMdU3eiUBgVweXkqo/RtD8rKaU="></script>
+    "fkS1JEsTYg79MVVXeHZoNlHiY/y1QV2WM2yXdMOSl7Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"LL_A02 Suika","description":"オリジナル３Dアクセサリー　LL-A02 Suika\n本品はオリジナル3Dモデルです。\nVRChat等のワールドオブジェクトにご利用できます。","url":"https://booth.pm/ja/items/1301072","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c01bca2e-25b7-4b7b-ab98-9d8afded3caf/i/1301072/bc675e67-6b2e-42d3-980b-22e0a99d423c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vG4kLknm0DGOKiBU/YMdU3eiUBgVweXkqo/RtD8rKaU="></script>
+    nonce="fkS1JEsTYg79MVVXeHZoNlHiY/y1QV2WM2yXdMOSl7Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1301072/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1301072/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
