updated at: 2023-04-25 21:57, [VRchat想定]gear wand ＆gear stand - ペトリコール - BOOTH

--- a/VRChat/43/1298243.html
+++ b/VRChat/43/1298243.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NA5gsWono0GWk3ZqHGBtw6slyuw/znWwrzis5CU8yrk="></script>
+    "o/Oin0XkUf83efRxvjqEdL6L5QKVs9zgyNqDOHePprY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRchat想定]gear wand ＆gear stand","description":"Gear wand ＆Gear stand 紹介文\n\n[製品内容]\n・UnityPackage\n・read me\n\n[説明]\n・歯車が回る杖とスタンドです。\n・歯車の回転はhttps://twitter.com/makitorion/status/1112550686628020226?s=20からご確認ください。\n・武器と家具としてご使用いただけます。\nもちろんそれ以外の使用も禁止事項に触れなければOKです。\n・宝石の部分にはUnity AssetにあるGem shaderをDLしてください。\n\n[禁止事項]\n×公序良俗に反する利用\n　×政治的・宗教的主張に関する利用\n　×製品の再販売\n　×自作発言","url":"https://booth.pm/ja/items/1298243","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9acc3a5a-1c6d-4055-a999-cdd91a9e8240/i/1298243/c017a99d-c37d-427e-9330-81dbccbcefa5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NA5gsWono0GWk3ZqHGBtw6slyuw/znWwrzis5CU8yrk="></script>
+    nonce="o/Oin0XkUf83efRxvjqEdL6L5QKVs9zgyNqDOHePprY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1298243/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               202
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1298243/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               202
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
