updated at: 2023-04-25 21:57, [武器]十字軍大剣・Reikspire - Fabricatorium Mogura - BOOTH

--- a/VRChat/36/1298036.html
+++ b/VRChat/36/1298036.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "O4qjBw/bNsnYGFiWlToHjtOoFZYzGlyj/Cz+7Deu19Y="></script>
+    "zSpbqfWGhPUg0E+QUR8+kUGqATJSa9XvG/sKZQohqxo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[武器]十字軍大剣・Reikspire","description":"十字軍用の(両手剣)ツヴァイヘンダーです\nUSE THIS TO CUT OFF HERETICS' HEAD.\nポリゴン数 ：2880\nTexture originally designed for standard-roughness shader of unity,but compatiable for arktoon shader.\n二次配布、自作発言、商用利用はお止めください\n改変自由 R18/G使用可能\nvrchat使用限\n不明な点や質問などありましたらこちらに連絡ください\nそれでは良きVRCライフを ブラザース！\nNO FURTHER PLAN FOR FIXING ITS PROBLEM.\nI PRESERVE AUTHOURITY.（Supported by Copyright Law of the People's Republic of China）","url":"https://booth.pm/ja/items/1298036","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/753c946e-b3d0-4d99-ad93-71a37cc147a2/i/1298036/4b58c095-cfaa-4505-9efa-29d1af52624b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O4qjBw/bNsnYGFiWlToHjtOoFZYzGlyj/Cz+7Deu19Y="></script>
+    nonce="zSpbqfWGhPUg0E+QUR8+kUGqATJSa9XvG/sKZQohqxo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1298036/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1298036/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
