updated at: 2023-04-25 21:58, AMBLE（Ver.VR） - shurikenshushu - BOOTH

--- a/VRChat/96/1296196.html
+++ b/VRChat/96/1296196.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "++yLX9QFXi/z1gpwRul0eFQMDLmUJY3wZ7IW21ESVe0="></script>
+    "jIPcS08xVEATBzjV4Cmybv0FeYa/U1XW9urzrVj0eiE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AMBLE（Ver.VR）","description":"*************更新情報************\n12/04/19\n・背骨のウェイトを塗り直しました\n・VRChat用パッケージにark toon shader \n　(https://packetbird.booth.pm/items/1027997)\n　を適用させました\n03/04/19\n・Unity Package内からVRChat SDKを削除しました\n*********************************\n\n※本製品はオリジナル3Dモデルです※\n\nお見積り・ご連絡は下記まで\n\nいかにんじゃtwitter\n@Unc_leSquid\n\nいかにんじゃmail\nikaaki1988@gmail.com","url":"https://booth.pm/ja/items/1296196","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5f802286-f731-4e78-a5a8-1a9b511da2da/i/1296196/31e74c80-6551-4bf1-9a0c-9d93f88ab100_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="++yLX9QFXi/z1gpwRul0eFQMDLmUJY3wZ7IW21ESVe0="></script>
+    nonce="jIPcS08xVEATBzjV4Cmybv0FeYa/U1XW9urzrVj0eiE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1296196/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               130
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1296196/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               130
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
